--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,3 +11,7 @@ spring:
     username: root
     password: root123
     type: com.alibaba.druid.pool.DruidDataSource
+  banner:
+    location: classpath:banner.txt
+mybatis:
+  mapper-locations:
