认证：和数据库的交互完成 1、realm和shiro过滤器都得是注入的方式从ioc中获取 2、数据库的密码必须也是md5加密的，否责会报错

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,4 +14,5 @@ spring:
   banner:
     location: classpath:banner.txt
 mybatis:
-  mapper-locations:
+  mapper-locations: com.pipichao.springboot.withDataBase.dao/*.xml
+  config-location: classpath:mybatisConfig.xml
