--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,14 @@
             <artifactId>mybatis-spring</artifactId>
             <version>1.3.2</version>
         </dependency>
+
+        <!--配合扫描shiro的注解-->
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.8.13</version>
+        </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
