--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,18 +1,3 @@
-server:
-  port: 8080
-  servlet:
-    context-path: /
 spring:
-  resources:
-    static-locations: classpath:static
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/test?serverTimezone=UTC
-    username: root
-    password: root123
-    type: com.alibaba.druid.pool.DruidDataSource
-  banner:
-    location: classpath:banner.txt
-mybatis:
-  mapper-locations: com.pipichao.springboot.withDataBase.dao/*.xml
-  config-location: classpath:mybatisConfig.xml
+  profiles:
+    include: dev
