整合redis缓存：session管理 ，在缓存中存储授权信息(权限，角色)； 1、redis关闭后数据将清空 2、第一次授权时候 从数据库查询角色和权限 3、后面的授权会在缓存中直接拿授权信息

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -13,6 +13,20 @@ spring:
     type: com.alibaba.druid.pool.DruidDataSource
   banner:
     location: classpath:banner.txt
+  redis:
+    port: 6379
+    password:
+    host: localhost
+    jedis:
+      pool:
+        max-idle: 100
+        min-idle: 1
+        max-active: 1000
+        max-wait: 1
+
+
+
+
 mybatis:
   mapper-locations: com.pipichao.springboot.withDataBase.dao/*.xml
   config-location: classpath:mybatisConfig.xml
